@@ -79,7 +79,7 @@ corGaus(value, form, nugget, metric, fixed)
 \seealso{
   \code{\link{Initialize.corStruct}},
   \code{\link{summary.corStruct}},
-  \code{\link[stats]{dist}}
+  \code{\link{dist}}
 }
 \examples{
 sp1 <- corGaus(form = ~ x + y + z)
