@@ -59,7 +59,7 @@ lmeControl(maxIter, msMaxIter, tolerance, niterEM, msMaxEval, msTol,
    default since (\R 2.2.0) or \code{\link{optim}} (the previous
    default).}
  \item{optimMethod}{character - the optimization method to be used with
-   the \code{\link[stats]{optim}} optimizer. The default is
+   the \code{\link{optim}} optimizer. The default is
    \code{"BFGS"}.  An alternative is \code{"L-BFGS-B"}.}
  \item{minAbsParApVar}{numeric value - minimum absolute parameter value
    in the approximate variance calculation.  The default is \code{0.05}.}
