@@ -76,9 +76,9 @@
   a diagnostic Trellis plot.
 }
 \author{Jose Pinheiro \email{Jose.Pinheiro@pharma.novartis.com} and Douglas Bates \email{bates@stat.wisc.edu}}
-\seealso{\code{\link{gls}}, \code{\link[lattice]{xyplot}},
-   \code{\link[lattice]{bwplot}},
-   \code{\link[lattice]{histogram}}}
+\seealso{\code{\link{gls}}, \code{\link{xyplot}},
+  \code{\link{bwplot}}, \code{\link{histogram}}
+}
 \examples{
 fm1 <- gls(follicles ~ sin(2*pi*Time) + cos(2*pi*Time), Ovary,
            correlation = corAR1(form = ~ 1 | Mare))
