@@ -73,16 +73,15 @@
   covariates, or groups.
 }
 \author{Jose Pinheiro \email{Jose.Pinheiro@pharma.novartis.com} and Douglas Bates \email{bates@stat.wisc.edu}}
-\seealso{\code{\link{lmList}},
-  \code{\link[lattice]{dotplot}}}
+\seealso{
+  \code{\link{lmList}}, \code{\link{dotplot}}
+}
 \examples{
 fm1 <- lmList(distance ~ age | Subject, Orthodont)
 plot(ranef(fm1))
 fm1RE <- ranef(fm1, aug = TRUE)
 plot(fm1RE, form = ~ Sex)
-\dontrun{
-plot(fm1RE, form = age ~ Sex)
-}
+\dontrun{plot(fm1RE, form = age ~ Sex)}
 }
 \keyword{models}
 
